bootstrap 5 - modulo formularios - campo somente leitura

--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -66,5 +66,25 @@
         </form>
 
     </div>
+
+    <!-- read only -->
+    <div class="col-4 m-4">
+        <h2>formulario de read only</h2>
+        <form>
+            <div class="mb-4">
+                <label for="email" class="form-label">e-mail</label>
+                <input type="email" class="form-control" id="email2" name="email" aria-describedby="emailhelp" placeholder="insira seu email" readonly>
+                <div id="emailhelp" class="form-text">nao conpartilhamos seu endereco de email</div>
+            </div>
+            <div class="mb-4">
+                <label for="email" class="form-label">e-mail</label>
+                <input type="email" class="form-control-plaintext" id="email3" name="email" aria-describedby="emailhelp" placeholder="insira seu email" readonly>
+                <div id="emailhelp" class="form-text">nao conpartilhamos seu endereco de email</div>
+            </div>
+            <button type="submit" class="btn btn-primary">Cadastrar</button>
+        </form>
+
+
+    </div>
 </body>
 </html>
