--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -86,5 +86,20 @@
 
 
     </div>
+
+    <!-- input de arquivos -->
+    <div class="col-4 m-4">
+        <h2>teste de input de arquivo</h2>
+        <form>
+            <div class="mb-4">
+                <label for="foto" class="form-label">Apenas um arquivo</label>
+                <input type="file" class="form-control" id="foto" >
+            </div>
+            <div class="mb-4">
+                <label for="foto" class="form-label">multiplos arquivo</label>
+                <input type="file" class="form-control" id="foto" multiple >
+            </div>
+        </form>
+    </div>
 </body>
 </html>
