bootstrap 5 - modulo formularios - input datalist

--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -101,5 +101,23 @@
             </div>
         </form>
     </div>
+
+    <!-- outros elementos -->
+    <div class="col-4 m-4">
+        <h2>outros inputs</h2>
+        <form>
+            <!-- data list -->
+            <div class="mb-4">
+                <label for="cidades" class="form-label">Selecione uma cidade</label>
+                <input class="form-control" list="datalistOptions" id="cidades" placeholder="digite cidades" >
+                <datalist id="datalistOptions">
+                    <option value="sao paulo"></option>
+                    <option value="rio de janeiro"></option>
+                    <option value="porto alegre"></option>
+                    <option value="curitiba"></option>
+                </datalist>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
