--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -117,6 +117,11 @@
                     <option value="curitiba"></option>
                 </datalist>
             </div>
+            <!-- cor -->
+            <div class="mb-4">
+                <label for="cor" class="form-label">Selecione a cor</label>
+                <input type="color" class="form-control form-control-color" id="cor" value="#000" title="escolha uma cor" >
+            </div>
         </form>
     </div>
 </body>
