bootstrap 5 - modulo formularios - select unico

--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -122,6 +122,16 @@
                 <label for="cor" class="form-label">Selecione a cor</label>
                 <input type="color" class="form-control form-control-color" id="cor" value="#000" title="escolha uma cor" >
             </div>
+            <!--  select -->
+            <div class="mb-4">
+                <label for="opcoes">Selecione a sua</label>
+                <select class="form-select" name="opcoes" id="opcoes">
+                    <option selected>Selecione um valor</option>
+                    <option value="1">primeira</option>
+                    <option value="2">segunda</option>
+                    <option value="3">terceira</option>
+                </select>
+            </div>
         </form>
     </div>
 </body>
