bootstrap 5 - modulo formularios - select multiplo

--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -132,6 +132,14 @@
                     <option value="3">terceira</option>
                 </select>
             </div>
+            <div class="mb-4">
+                <select class="form-select" multiple>
+                    <option>Selecione suas opcoes</option>
+                    <option value="1">maca</option>
+                    <option value="2">banana</option>
+                    <option value="3">laraja</option>
+                </select>
+            </div>
         </form>
     </div>
 </body>
