bootstrap 5 - modulo formularios - checkbox

--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -140,6 +140,23 @@
                     <option value="3">laraja</option>
                 </select>
             </div>
+
+            <!-- checkboox -->
+            <div class="mb-4">
+                <h2>marque opcoes</h2>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="privacidade" >
+                    <label for="privacidade" class="form-check-label">Aceitar termos de privacidade</label>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="emails" checked>
+                    <label for="emails" class="form-check-label">quer receber os emails de propaganda</label>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="desabilidato" disabled>
+                    <label for="desabilidato" class="form-check-label">quer receber os emails de propaganda</label>
+                </div>
+            </div>
         </form>
     </div>
 </body>
