--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -156,6 +156,18 @@
                     <input type="checkbox" class="form-check-input" id="desabilidato" disabled>
                     <label for="desabilidato" class="form-check-label">quer receber os emails de propaganda</label>
                 </div>
+
+                <div class="mb-4">
+                    <h2>qual vc quer ?</h2>
+                    <div class="form-check">
+                        <input type="radio" class="form-check-input" name="meu_radio" id="a" value="a" >
+                        <label for="a" class="form-check-label">radio checado</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" class="form-check-input" name="meu_radio" id="b" value="b" >
+                        <label for="b" class="form-check-label">radio checado</label>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
