bootstrap 5 - modulo formularios - input switch

--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -169,6 +169,19 @@
                     </div>
                 </div>
             </div>
+
+            <!-- switch -->
+            <div class="mb-4">
+                <h2>escolha suas configuracoes</h2>
+                <div class="form-check form-switch">
+                    <input type="checkbox" class="form-check-input" id="flex-siwtch" >
+                    <label for="flex-siwtch" class="form-check-label">voce quer ativar isso ?</label>
+                </div>
+                <div class="form-check form-switch">
+                    <input type="checkbox" class="form-check-input" id="flex-siwtch-disabled" disabled >
+                    <label for="flex-siwtch-disabled" class="form-check-label">voce quer ativar isso ?</label>
+                </div>
+            </div>
         </form>
     </div>
 </body>
