bootstrap 5 - modulo formularios - input range

--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -182,6 +182,13 @@
                     <label for="flex-siwtch-disabled" class="form-check-label">voce quer ativar isso ?</label>
                 </div>
             </div>
+
+            <!-- range -->
+            <div class="mb-4">
+                <h2>por favor responda</h2>
+                <label for="probabilidade" class="form-label" >qual a probabilidade de vc indicar esse site</label>
+                <input type="range" class="form-range" min="0" max="5" id="probabilidade" >
+            </div>
         </form>
     </div>
 </body>
