bootstrap 5 - modulo formularios - agrupando com group

--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -189,6 +189,25 @@
                 <label for="probabilidade" class="form-label" >qual a probabilidade de vc indicar esse site</label>
                 <input type="range" class="form-range" min="0" max="5" id="probabilidade" >
             </div>
+
+            <!-- input group-->
+            <div class="input-group mb-4">
+                <span class="input-group-text" id="basic-addon">@</span>
+                <input type="email" class="form-control" placeholder="digite seu email" >
+            </div>
+
+            <div class="input-group mb-4">
+                <span class="input-group-text" id="basic-addon2">#</span>
+                <input type="email" class="form-control" placeholder="digite o nome do usuario" >
+            </div>
+
+            <p>quanto vc quer depositar? (sem centavos)</p>
+            <div class="input-group mb-4">
+                <span class="input-group-text">R$</span>
+                <input type="text" class="form-control" placeholder="valor" >
+                <span class="input-group-text">,00</span>
+            </div>
+
         </form>
     </div>
 </body>
