bootstrap 5 - modulo formularios - floating label

--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -208,6 +208,13 @@
                 <span class="input-group-text">,00</span>
             </div>
 
+
+            <!-- label flutuante -->
+            <h2>faca o login para continuar</h2>
+            <div class="form-floating mb-3">
+                <input type="email" class="form-control" id="email" placeholder="insira o seu email" >
+                <label for="email">insira o seu email</label>
+            </div>
         </form>
     </div>
 </body>
