--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -217,5 +217,20 @@
             </div>
         </form>
     </div>
+
+    <!-- layouts com forms -->
+    <div class="container col-6 mb-4">
+        <h2>cadastre-se preenchendo o formulario</h2>
+        <form class="row g-3">
+            <div class="col-md-6">
+                <label form="email" class="form-label">email:</label>
+                <input type="text" class="form-control" id="email" placeholder="digite seu email" >
+            </div>
+            <div class="col-md-6">
+                <label form="password" class="form-label">senha:</label>
+                <input type="password" class="form-control" id="email" placeholder="digite sua senha" >
+            </div>
+        </form>
+    </div>
 </body>
 </html>
