bootstrap 5 - modulo formularios - unindo formularios com layout

--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -230,6 +230,40 @@
                 <label form="password" class="form-label">senha:</label>
                 <input type="password" class="form-control" id="email" placeholder="digite sua senha" >
             </div>
+            <div class="col-md-4">
+                <label for="cep" class="form-label">cep:</label>
+                <input type="text" class="form-control" placeholder="digite o cep" >
+            </div>
+            <div class="col-md-10">
+                <label for="rua" class="form-label">rua:</label>
+                <input type="text" class="form-control" id="rua" placeholder="digite sua rua" >
+            </div>
+            <div class="col-md-2">
+                <label for="numero" class="form-label">numero:</label>
+                <input type="text" class="form-control" id="numero" placeholder="numero" >
+            </div>
+            <div class="col-md-4">
+                <label for="cidade" class="form-label">cidade:</label>
+                <input type="text" class="form-control" id="cidade" placeholder="sua cidade" >
+            </div>
+            <div class="col-md-4">
+                <label for="estado" class="form-label">Estado:</label>
+                <select name="estado" id="estado" class="form-select">
+                    <option selected>escolha</option>
+                    <option value="1">...</option>
+                </select>
+            </div>
+            <div class="col-12">
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="newsletter" >
+                    <label for="newsletter" class="form-check-label">
+                        receber newsletter ?
+                    </label>
+                </div>
+            </div>
+            <div class="col-12">
+                <button type="submit" class="btn btn-primary">cadastrar</button>
+            </div>
         </form>
     </div>
 </body>
