--- a/hora-de-codar/7_forms/2_validacoes/index.html
+++ b/hora-de-codar/7_forms/2_validacoes/index.html
@@ -37,5 +37,33 @@
         </div>
     </div>
 
+    <!-- validacao html -->
+    <div class="container">
+        <div class="row justify-content-center m-4">
+            <div class="col-6">
+                <h2>Faca o login para continuar</h2>
+                <form class="row " >
+                    <div class="col-12 mb-4">
+                        <label for="email" class="form-label">e-mail</label>
+                        <input type="email" class="form-control" id="email" placeholder="digite o seu email" required >
+                        <div class="valid-feedback">
+                            ok
+                        </div>
+                    </div>
+                    <div class="col-12 mb-4">
+                        <label for="password" class="form-label">senha</label>
+                        <input type="password" class="form-control" id="password" placeholder="digite sua senha" required >
+                        <div class="valid-feedback">
+                            ok
+                        </div>
+                    </div>
+                    <div class="col-12 mb-4">
+                        <button class="btn btn-primary" type="submit">Entrar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
