--- a/hora-de-codar/8_projeto_forms/index.html
+++ b/hora-de-codar/8_projeto_forms/index.html
@@ -9,6 +9,31 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous" defer></script>
 </head>
 <body>
-    
+    <div class="container col-11 col-md-9" id="form-container">
+        <div class="row align-items-center gx-5">
+            <div class="col-md-6 order-md-2">
+                <h2>faca o login para continuar</h2>
+                <form>
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="digite o seu email" >
+                        <label for="email" class="form-label">Digite o seu email</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="password" class="form-control" id="password" name="password" placeholder="digite a sua senha" >
+                        <label for="password" class="form-label">Digite a sua senha</label>
+                    </div>
+                    <input  type="submit" class="btn btn-primary" value="entrar">
+                </form>
+            </div>
+            <div class="col-md-6 order-md-1">
+                <div class="col-12">
+                    <img src="img/sign_in.svg" alt="entrar no sistema" class="img-fluid" >
+                </div>>
+                <div class="col-12" id="link-container">
+                    <a href="register.html">ainda nao tenho cadastro</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
