--- a/hora-de-codar/8_projeto_forms/index.html
+++ b/hora-de-codar/8_projeto_forms/index.html
@@ -28,7 +28,7 @@
             <div class="col-md-6 order-md-1">
                 <div class="col-12">
                     <img src="img/sign_in.svg" alt="entrar no sistema" class="img-fluid" >
-                </div>>
+                </div>
                 <div class="col-12" id="link-container">
                     <a href="register.html">ainda nao tenho cadastro</a>
                 </div>
