--- a/hora-de-codar/8_projeto_forms/index.html
+++ b/hora-de-codar/8_projeto_forms/index.html
@@ -12,7 +12,7 @@
     <div class="container col-11 col-md-9" id="form-container">
         <div class="row align-items-center gx-5">
             <div class="col-md-6 order-md-2">
-                <h2>faca o login para continuar</h2>
+                <h2>Faça o login para continuar</h2>
                 <form>
                     <div class="form-floating mb-3">
                         <input type="email" class="form-control" id="email" name="email" placeholder="digite o seu email" >
