bootstrap 5 - modulo componentes - alert

--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -41,5 +41,18 @@
         </div>
     </div>
 
+    <!-- alert -->
+    <div class="col-6 m-4">
+        <div class="alert alert-primary" role="alert">
+            Esta é uma mensagem de alerta
+        </div>
+        <div class="alert alert-success" role="alert">
+            usuario cadastrado com sucesso
+        </div>
+        <div class="alert alert-danger" role="alert">
+            nao foi possivel fazer login
+        </div>
+    </div>
+
 </body>
 </html>
