bootstrap 5 - modulo componentes - alert variacoes

--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -52,7 +52,38 @@
         <div class="alert alert-danger" role="alert">
             nao foi possivel fazer login
         </div>
+
+        <!-- alert com links-->
+        <div class="alert alert-warning" role="alert">
+            não encontramos seu pedido, faça outra solicitação. <a href="" class="alert-link">clicando aqui</a>
+        </div>
+
+        <!-- com mas conteudo -->
+        <div class="alert alert-success" role="alert">
+            <h4>Pedido realizado</h4>
+            <p>recebemos o seu pedido, e ja estamos preparando para envio</p>
+            <hr>
+            <p class="mb-0">
+                caso vc precise de mas alguma informação, entre em contato
+                <a href="" class="alert-link">clicando aqui</a>
+            </p>
+        </div>
+
+        <!-- com icone de fechar -->
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <h4>Pedido realizado</h4>
+            <p>recebemos o seu pedido, e ja estamos preparando para envio</p>
+            <hr>
+            <p class="mb-0">
+                caso vc precise de mas alguma informação, entre em contato
+                <a href="" class="alert-link">clicando aqui</a>
+            </p>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+
     </div>
+
+
 
 </body>
 </html>
