bootstrap 5 - modulo componentes - badge

--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -83,6 +83,16 @@
 
     </div>
 
+    <!-- badge -->
+    <div class="col-4 m-4">
+        <h1>Cadeira gamer <span class="badge bg-secondary">New</span> </h1>
+        <h1>
+            Fone de ouvido <span class="badge bg-danger">10% off</span>
+        </h1>
+        <button type="button" class="btn btn-dark">
+            mensagens <span class="badge bg-success">4</span>
+        </button>
+    </div>
 
 
 </body>
