bootstrap 5 - modulo componentes - breadcrumb

--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -94,6 +94,16 @@
         </button>
     </div>
 
+    <!-- breadcrumb -->
+    <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item"><a href="#">Catalogo</a></li>
+                <li class="breadcrumb-item active" aria-current="page"><a href="#">Produto</a></li>
+            </ol>
+        </nav>
+    </div>
 
 </body>
 </html>
