--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -105,5 +105,23 @@
         </nav>
     </div>
 
+    <!-- buttons -->
+    <div class="container">
+        <div>
+            <button class="btn btn-primary">botao</button>
+            <button class="btn btn-success">entrar</button>
+            <button class="btn btn-info">entrar</button>
+        </div>
+        <div class="mb-4">
+            <a href="" class="btn btn-danger">deletar</a>
+        </div>
+        <div class="col-3 mb-4">
+            <div class="d-grid m-4">
+                <button class="btn btn-primary">botao de bloco</button>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 </html>
