--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -122,6 +122,22 @@
         </div>
     </div>
 
+    <!-- agrupamento de buttons -->
+    <div class="container mb-4">
+        <h2>configure a secao</h2>
+        <div class="btn-group" role="group" aria-label="exemplo">
+            <button class="btn btn-success" type="button">diminuir</button>
+            <button class="btn btn-success" type="button">confirmar</button>
+            <button class="btn btn-success" type="button">aumentar</button>
+        </div>
+
+        <div class="btn-group" role="group" aria-label="exemplo">
+            <button class="btn btn-outline-secondary" type="button">1</button>
+            <button class="btn btn-outline-secondary" type="button">2</button>
+            <button class="btn btn-outline-secondary" type="button">3</button>
+            <button class="btn btn-outline-secondary" type="button">4</button>
+        </div>
+    </div>
 
 </body>
 </html>
