--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -122,7 +122,7 @@
         </div>
     </div>
 
-    <!-- agrupamento de buttons -->
+    <!-- button groups -->
     <div class="container mb-4">
         <h2>configure a secao</h2>
         <div class="btn-group" role="group" aria-label="exemplo">
