bootstrap 5 - modulo componentes - card

--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -139,5 +139,52 @@
         </div>
     </div>
 
+    <!-- button groups -->
+    <div class="container mb-4">
+        <div class="card mb-4">
+            <img src="https://via.placeholder.com/300" class="card-img-top" alt="minha imagem" >
+            <div class="card-body">
+                <p class="card-text">esta é uma descricao do produto</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mb-4">
+        <div class="card mb-4">
+            <img src="https://via.placeholder.com/300" class="card-img-top" alt="minha imagem" >
+            <div class="card-body">
+                <p class="card-title">titulo do card</p>
+                <p class="card-text">esta é uma descricao do produto</p>
+                <a href="" class="btn btn-primary">Comprar</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mb-4">
+        <div class="card mb-4">
+            <div class="card-body">
+                <p class="card-title">titulo do card</p>
+                <h6 class="card-subtitle mb-2 text-muted">um subtitulo</h6>
+                <p class="card-text">esta é uma descricao do produto</p>
+                <a href="" class="card-link">Comprar</a>
+                <a href="" class="card-cancelar">cancelar</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="card text-center" id="card-banner">
+        <div class="card-header">
+            card banner
+        </div>
+        <div class="card-body">
+            <p class="card-title">titulo do card</p>
+            <p class="card-text">esta é uma descricao do produto, vaos colocar uma grande descricao nesse banner</p>
+            <a href="" class="btn btn-success">Comprar</a>
+        </div>
+        <div class="card-footer text-muted">
+            faltam 2 dias
+        </div>
+    </div>
+
 </body>
 </html>
