bootstrap 5 - modulo componentes - slide

--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -186,5 +186,23 @@
         </div>
     </div>
 
+    <!-- button groups -->
+    <div class="container mb-4">
+        <div class="col-8">
+            <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button class="active" type="button" data-bs-target="carousel" data-bs-slide-top="0" aria-current="true" aria-label="Slide 1"></button>
+                    <button  type="button" data-bs-target="carousel" data-bs-slide-top="0" aria-current="true" aria-label="Slide 2"></button>
+                    <button  type="button" data-bs-target="carousel" data-bs-slide-top="0" aria-current="true" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://via.placeholder.com/600" alt="descricao" class="d-block w-100" >
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
