--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -139,7 +139,7 @@
         </div>
     </div>
 
-    <!-- button groups -->
+    <!-- card -->
     <div class="container mb-4">
         <div class="card mb-4">
             <img src="https://via.placeholder.com/300" class="card-img-top" alt="minha imagem" >
@@ -186,7 +186,7 @@
         </div>
     </div>
 
-    <!-- button groups -->
+    <!-- carousel -->
     <div class="container mb-4">
         <div class="col-8">
             <div id="carousel" class="carousel slide" data-bs-ride="carousel">
