--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -204,5 +204,22 @@
         </div>
     </div>
 
+    <!-- close button -->
+    <div class="container m-4">
+        <p class="bg-danger">
+            Clique para fechar
+            <button class="btn-close" type="button" aria-label="Close"></button>
+        </p>
+        <a href="#" class="btn btn-danger">
+            Fechar
+            <button class="btn-close" type="button" aria-label="Close"></button>
+        </a>
+        <!-- desabilitado -->
+        <p>
+            Fechar
+            <button class="btn-close" type="button" aria-label="Close" disabled></button>
+        </p>
+    </div>
+
 </body>
 </html>
