--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -221,5 +221,24 @@
         </p>
     </div>
 
+    <!-- collapse -->
+    <div class="container mb-4">
+        <button
+            class="btn btn-primary"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapse"
+            aria-expanded="false"
+            aria-controls="collapse"
+        >
+            clique para exibir/esconder
+        </button>
+        <div class="collapse" id="collapse">
+            <div class="col-12 mt-4">
+                este é o texto que pode ser exibindo ou nao
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
