--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -240,5 +240,31 @@
         </div>
     </div>
 
+    <!-- dropdown -->
+    <div class="container mb-4">
+        <div class="dropdown mb-4">
+            <a class="btn btn-secondary dropdown-toggle" role="button" id="dropdown"
+                data-bs-toggle="dropdown" aria-expanded="false">clique aqui</a>
+
+            <ul class="dropdown-menu" aria-labelledby="dropdown">
+                <li>
+                    <a href="#" class="dropdown-item">link 1</a>
+                </li>
+                <li>
+                    <a href="#" class="dropdown-item">link 2</a>
+                </li>
+                <li>
+                    <a href="#" class="dropdown-item">link 3</a>
+                </li>
+                <li>
+                    <a href="#" class="dropdown-item">link 4</a>
+                </li>
+                <li>
+                    <a href="#" class="dropdown-item">link 5</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
 </body>
 </html>
