bootstrap 5 - modulo componentes - drowpdown

--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -244,7 +244,9 @@
     <div class="container mb-4">
         <div class="dropdown mb-4">
             <a class="btn btn-secondary dropdown-toggle" role="button" id="dropdown"
-                data-bs-toggle="dropdown" aria-expanded="false">clique aqui</a>
+                data-bs-toggle="dropdown" aria-expanded="false">
+                clique aqui
+            </a>
 
             <ul class="dropdown-menu" aria-labelledby="dropdown">
                 <li>
