bootstrap 5 - modulo componentes - modal

--- a/hora-de-codar/9_componentes/1_aulas/index.html
+++ b/hora-de-codar/9_componentes/1_aulas/index.html
@@ -268,5 +268,28 @@
         </div>
     </div>
 
+    <!-- modal -->
+     <div class="container mb-4">
+        <button class="btn btn-info" type="button" data-bs-toggle="modal" data-bs-target="#modal">
+            abrir modal
+        </button>
+     </div>
+     <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalLabel">este é o titulo</h5>
+                    <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>aqui vc pode colocar qualquer coisa</p>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">fechar</button>
+                </div>
+            </div>
+        </div>
+     </div>
+
 </body>
 </html>
