--- a/hora-de-codar/9_componentes/2_aulas/index.html
+++ b/hora-de-codar/9_componentes/2_aulas/index.html
@@ -67,5 +67,18 @@
         </div>
     </div>
 
+    <!-- paginacao -->
+    <div class="container mb-4">
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                <li class="page-item"><a href="" class="page-link">Anterior</a></li>
+                <li class="page-item"><a href="" class="page-link">1</a></li>
+                <li class="page-item"><a href="" class="page-link">2</a></li>
+                <li class="page-item"><a href="" class="page-link">3</a></li>
+                <li class="page-item"><a href="" class="page-link">Proximo</a></li>
+            </ul>
+        </nav>
+    </div>
+
 </body>
 </html>
