--- a/hora-de-codar/9_componentes/2_aulas/index.html
+++ b/hora-de-codar/9_componentes/2_aulas/index.html
@@ -8,6 +8,7 @@
     <title>bootstrap componentes</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/scripts.js" defer></script>
 </head>
 <body>
     
@@ -78,6 +79,13 @@
                 <li class="page-item"><a href="" class="page-link">Proximo</a></li>
             </ul>
         </nav>
+    </div>
+
+    <!-- pop over -->
+    <div class="container mb-4">
+        <button class="btn btn-lg btn-success" type="button" data-bs-toggle="popover" title="este é o titulo" data-bs-content="e aqui podemos inserir a descricao">
+            clique aqui
+        </button>
     </div>
 
 </body>
