--- a/hora-de-codar/9_componentes/2_aulas/index.html
+++ b/hora-de-codar/9_componentes/2_aulas/index.html
@@ -88,5 +88,28 @@
         </button>
     </div>
 
+    <!-- progressbar -->
+    <div class="container mb-4">
+        <div class="progress mb-4">
+            <div 
+                class="progress-bar" 
+                role="progressbar" 
+                aria-valuenow="0" 
+                aria-valuemin="0" 
+                aria-valuemax="100"
+            ></div>
+        </div>
+        <div class="progress mb-4">
+            <div 
+                class="progress-bar bg-success" 
+                role="progressbar" 
+                style="width: 25%;" 
+                aria-valuenow="25" 
+                aria-valuemin="0" 
+                aria-valuemax="100"
+            ></div>
+        </div>
+    </div>
+
 </body>
 </html>
