--- a/hora-de-codar/9_componentes/2_aulas/index.html
+++ b/hora-de-codar/9_componentes/2_aulas/index.html
@@ -111,5 +111,55 @@
         </div>
     </div>
 
+    <!-- scroll spy -->
+    <nav id="scrollspy" class="navbar navbar-light bg-light px-3 mb-4">
+        <a href="#" class="navbar-brand">minha marca</a>
+        <ul class="nav">
+            <li class="nav-item">
+                <a href="#secao-1" class="nav-link">secao 1</a>
+            </li>
+            <li class="nav-item">
+                <a href="#secao-2" class="nav-link">secao 2</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div data-bs-spy="scroll" data-bs-target="#scrollspy" data-bs-offset="0" tabindex="0">
+        <h4 id="secao-1">secao 1</h4>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <h4 id="secao-2">secao 2</h4>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+        <p class="mb-4">conteudo</p>
+    </div>
+
 </body>
 </html>
