bootstrap 5 - modulo componentes - toast

--- a/hora-de-codar/9_componentes/2_aulas/index.html
+++ b/hora-de-codar/9_componentes/2_aulas/index.html
@@ -161,5 +161,19 @@
         <p class="mb-4">conteudo</p>
     </div>
 
+    <!-- toast -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11;">
+        <div class="toast show" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">sistema</strong>
+                <small>11 minutos atras</small>
+                <button class="btn-close" type="button" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                esta é a mensagem do sistema
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
