bootstrap 5 - modulo componentes - tooltip

--- a/hora-de-codar/9_componentes/2_aulas/index.html
+++ b/hora-de-codar/9_componentes/2_aulas/index.html
@@ -175,7 +175,7 @@
         </div>
     </div>
 
-    <!-- toast -->
+    <!-- tooltip -->
     <div class="container">
         <button class="btn btn-secondary" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="aqui vai uma dica">
             este botao tem tooltip
