--- a/hora-de-codar/9_componentes/3_tarefa/index.html
+++ b/hora-de-codar/9_componentes/3_tarefa/index.html
@@ -12,5 +12,35 @@
 </head>
 <body>
     
+    <div class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand">tarefa 4</a>
+            <button 
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle Navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active" aria-current="page">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link" >Categorias</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link " >Contato</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
