--- a/hora-de-codar/10_exacttime/index.html
+++ b/hora-de-codar/10_exacttime/index.html
@@ -23,7 +23,7 @@
 <body>
     
     <!-- navbar -->
-    <div class="navbar navbar-expand-lg primary-bg-color py-4 px-2" id="navbar">
+    <nav class="navbar navbar-expand-lg primary-bg-color py-4 px-2" id="navbar">
         <div class="container">
             <a href="#" class="navbar-brand">ExactTime</a>
             <div id="navbar-items">
@@ -57,7 +57,7 @@
                 </ul>
             </div>
         </div>    
-    </div>
+    </nav>
 
 </body>
 </html>
