--- a/hora-de-codar/10_exacttime/index.html
+++ b/hora-de-codar/10_exacttime/index.html
@@ -94,5 +94,36 @@
     </nav>
     <!-- fim navbar -->
 
+    <!-- banners -->
+    <div class="container" id="banners-container">
+        <div class="carousel slide" id="slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/banner1.jpg" alt="banner 1" class="d-block w-100 img-fluid"  >
+                    <div class="carousel-caption primary-bg-color">
+                        <h5>relogios de luxo</h5>
+                        <p>para voce estar pronto em qualquer situação</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/banner2.jpg" alt="banner 2" class="d-block w-100 img-fluid"  >
+                    <div class="carousel-caption primary-bg-color">
+                        <h5>linha importada</h5>
+                        <p>conheca os melhores relogios suicos, com pronta entrega</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#slider" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#slider" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">next</span>
+            </button>
+        </div>
+    </div>
+    <!-- fim banners -->
+
 </body>
 </html>
