bootstrap 5 - modulo projeto exact time - estruturando mini banners

--- a/hora-de-codar/10_exacttime/index.html
+++ b/hora-de-codar/10_exacttime/index.html
@@ -122,6 +122,25 @@
                 <span class="visually-hidden">next</span>
             </button>
         </div>
+        <div class="container" id="mini-banners">
+            <div class="row justify-content-around">
+                <div class="col-12 dark-bg-color" id="mini-banner-1">
+                    <h2>nova colecao</h2>
+                    <img src="img/relogio1.png" alt="relogio 1" >
+                    <a href="#">compre agora</a>
+                </div>
+                <div class="col-12 secondary-bg-color" id="mini-banner-2">
+                    <h2>promocoes</h2>
+                    <img src="img/relogio2.png" alt="relogio 1" >
+                    <a href="#">compre agora</a>
+                </div>
+                <div class="col-12 light-bg-color" id="mini-banner-3">
+                    <h2 class="secondary-bg-color">edicao limitada</h2>
+                    <img src="img/relogio3.png" alt="relogio 1" >
+                    <a href="#">compre agora</a>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- fim banners -->
 
