bootstrap 5 - modulo projeto exact time - corrige mini banners

--- a/hora-de-codar/10_exacttime/index.html
+++ b/hora-de-codar/10_exacttime/index.html
@@ -135,7 +135,7 @@
                     <a href="#">compre agora</a>
                 </div>
                 <div class="col-12 light-bg-color" id="mini-banner-3">
-                    <h2 class="secondary-bg-color">edicao limitada</h2>
+                    <h2 class="secondary-color">edicao limitada</h2>
                     <img src="img/relogio3.png" alt="relogio 1" >
                     <a href="#">compre agora</a>
                 </div>
