--- a/hora-de-codar/10_exacttime/index.html
+++ b/hora-de-codar/10_exacttime/index.html
@@ -144,5 +144,42 @@
     </div>
     <!-- fim banners -->
 
+    <!-- fim banners -->
+    <div class="container" id="best-sellers">
+        <h2 class="title primary-color">Best Sellers</h2>
+        <div class="row">
+            <div class="col-12 col-md-3">
+                <div class="card primary-bg-color">
+                    <img src="img/relogio4.png" alt="relogio 1" class="card-img-top img-fluid" >
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relogio</p>
+                        <h5 class="card-title">Nome do produto</h5>
+                        <p class="card-text primary-color">R$ 10,00</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+                <div class="card primary-bg-color">
+                    <img src="img/relogio5.png" alt="relogio 1" class="card-img-top img-fluid" >
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relogio</p>
+                        <h5 class="card-title">Nome do produto</h5>
+                        <p class="card-text primary-color">R$ 10,00</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+                <div class="card primary-bg-color">
+                    <img src="img/relogio6.png" alt="relogio 1" class="card-img-top img-fluid" >
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relogio</p>
+                        <h5 class="card-title">Nome do produto</h5>
+                        <p class="card-text primary-color">R$ 10,00</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 </html>
