bootstrap 5 - modulo projeto exact time - html dos best sellers

--- a/hora-de-codar/10_exacttime/index.html
+++ b/hora-de-codar/10_exacttime/index.html
@@ -144,7 +144,7 @@
     </div>
     <!-- fim banners -->
 
-    <!-- fim banners -->
+    <!-- best sellers -->
     <div class="container" id="best-sellers">
         <h2 class="title primary-color">Best Sellers</h2>
         <div class="row">
