bootstrap 5 - modulo projeto exact time - finalizando best sellers

--- a/hora-de-codar/10_exacttime/index.html
+++ b/hora-de-codar/10_exacttime/index.html
@@ -158,6 +158,8 @@
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
+            </div>
+            <div class="col-12 col-md-3">
                 <div class="card primary-bg-color">
                     <img src="img/relogio5.png" alt="relogio 1" class="card-img-top img-fluid" >
                     <div class="card-body">
@@ -167,6 +169,8 @@
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
+            </div>
+            <div class="col-12 col-md-3">
                 <div class="card primary-bg-color">
                     <img src="img/relogio6.png" alt="relogio 1" class="card-img-top img-fluid" >
                     <div class="card-body">
@@ -176,6 +180,7 @@
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     </div>
