bootstrap 5 - modulo projeto exact time - banner de destaque

--- a/hora-de-codar/10_exacttime/index.html
+++ b/hora-de-codar/10_exacttime/index.html
@@ -185,6 +185,20 @@
         </div>
     </div>
 
+    <!-- banner destauqe -->
+    <div class="container-fluid" id="bottom-banner">
+        <div class="row">
+            <div class="col-12 col-md-8">
+                <p class="primary-color offer-subtitle">Desconto de ate R$ 12,88</p>
+                <h2 class="light-color">Relogio x</h2>
+                <p class="secondary-color">Presenteie o seu amor com este relogio luxuoso</p>
+                <a href="#" class="btn btn-primary">Comprar agora</a>
+            </div>
+            <div class="col-12 col-md-4">
+                <img src="img/relogio7.png" alt="relogio x" >
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
