bootstrap 5 - modulo projeto exact time - banner de destaque

--- a/hora-de-codar/10_exacttime/index.html
+++ b/hora-de-codar/10_exacttime/index.html
@@ -185,7 +185,7 @@
         </div>
     </div>
 
-    <!-- banner destauqe -->
+    <!-- banner destaque -->
     <div class="container-fluid" id="bottom-banner">
         <div class="row">
             <div class="col-12 col-md-8">
