--- a/hora-de-codar/10_exacttime/index.html
+++ b/hora-de-codar/10_exacttime/index.html
@@ -200,5 +200,87 @@
         </div>
     </div>
 
+    <!-- produtos novos -->
+    <div class="container" id="new-products">
+        <div class="title primary-color">Novidades</div>
+        <div class="row">
+            <div class="col-12 col-md-3 d-none d-md-flex" id="new-products-banner">
+                <p class="secondary-color">Os melhores</p>
+                <h3>Relogios</h3>
+                <p class="primary-color">pelos menores precos</p>
+            </div>
+            <div class="col-12 col-md-9">
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="img/relogio6.png" alt="relogio 1" class="card-img-top img-fluid" >
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relogio</p>
+                                <h5 class="card-title">Nome do produto</h5>
+                                <p class="card-text primary-color">R$ 10,00</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="img/relogio6.png" alt="relogio 1" class="card-img-top img-fluid" >
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relogio</p>
+                                <h5 class="card-title">Nome do produto</h5>
+                                <p class="card-text primary-color">R$ 10,00</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="img/relogio6.png" alt="relogio 1" class="card-img-top img-fluid" >
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relogio</p>
+                                <h5 class="card-title">Nome do produto</h5>
+                                <p class="card-text primary-color">R$ 10,00</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="img/relogio6.png" alt="relogio 1" class="card-img-top img-fluid" >
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relogio</p>
+                                <h5 class="card-title">Nome do produto</h5>
+                                <p class="card-text primary-color">R$ 10,00</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="img/relogio6.png" alt="relogio 1" class="card-img-top img-fluid" >
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relogio</p>
+                                <h5 class="card-title">Nome do produto</h5>
+                                <p class="card-text primary-color">R$ 10,00</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="img/relogio6.png" alt="relogio 1" class="card-img-top img-fluid" >
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relogio</p>
+                                <h5 class="card-title">Nome do produto</h5>
+                                <p class="card-text primary-color">R$ 10,00</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
