bootstrap 5 - modulo projeto exact time - inicio do rodape

--- a/hora-de-codar/10_exacttime/index.html
+++ b/hora-de-codar/10_exacttime/index.html
@@ -294,5 +294,35 @@
         </div>
     </div>
 
+    <!-- footer -->
+    <footer id="footer">
+        <div class="container-fluid" id="footer-links-container">
+            <div class="row">
+                <div class="col-12 col-md-4 footer-column">
+                    <h3>Paginas</h3>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="" class="secondary-color">Home</a></li>
+                        <li class="mb-2"><a href="" class="secondary-color">Categorias</a></li>
+                        <li class="mb-2"><a href="" class="secondary-color">Promocoes</a></li>
+                        <li class="mb-2"><a href="" class="secondary-color">Contato</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 footer-column" id="footer-center">
+                    <h3>ExactTime</h3>
+                    <p class="secondary-color">Alguma duvida? ligue para nos</p>
+                    <p class="store-phone"><i class="bi bi-telephone"></i> (91) 9999-99999 </p>
+                </div>
+                <div class="col-12 col-md-4 footer-column">
+                    <h3>Informacoes</h3>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="" class="secondary-color">Politica de privacidade</a></li>
+                        <li class="mb-2"><a href="" class="secondary-color">Politica de entregua</a></li>
+                        <li class="mb-2"><a href="" class="secondary-color">Rastreie seu pedido</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
