bootstrap 5 - modulo projeto exact time - inicio do rodape

--- a/hora-de-codar/10_exacttime/index.html
+++ b/hora-de-codar/10_exacttime/index.html
@@ -316,7 +316,7 @@
                     <h3>Informacoes</h3>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="" class="secondary-color">Politica de privacidade</a></li>
-                        <li class="mb-2"><a href="" class="secondary-color">Politica de entregua</a></li>
+                        <li class="mb-2"><a href="" class="secondary-color">Politica de entregue</a></li>
                         <li class="mb-2"><a href="" class="secondary-color">Rastreie seu pedido</a></li>
                     </ul>
                 </div>
