bootstrap 5 - modulo helpers - clearfix

--- a/hora-de-codar/11_helpers/index.html
+++ b/hora-de-codar/11_helpers/index.html
@@ -11,5 +11,16 @@
 </head>
 <body>
     
+    <!-- com clear fix -->
+    <div class="clearfix mt-4">
+        <div class="box float-end"></div>
+    </div>
+    <div class="box"></div>
+
+    <!-- sem  clear fix -->
+    <div class="box float-end"></div>
+    <div class="box"></div>
+
+
 </body>
 </html>
