bootstrap 5 - modulo helpers - links coloridos

--- a/hora-de-codar/11_helpers/index.html
+++ b/hora-de-codar/11_helpers/index.html
@@ -21,6 +21,13 @@
     <div class="box float-end"></div>
     <div class="box"></div>
 
+    <!-- links colorido -->
+    <div class="container m-4">
+        <a href="" class="link-primary">link primary</a>
+        <button class="btn btn-primary">botao primario</button>
+        <a href="" class="link-success">link success</a>
+        <button class="btn btn-success">botao success</button>
+    </div>
 
 </body>
 </html>
