bootstrap 5 - modulo helpers - proporcao rario

--- a/hora-de-codar/11_helpers/index.html
+++ b/hora-de-codar/11_helpers/index.html
@@ -29,5 +29,19 @@
         <button class="btn btn-success">botao success</button>
     </div>
 
+    <!-- ratio -->
+    <div class="container">
+        <div class="col-md-4 mb-4">
+            <div class="ratio ratio-16x9">
+                <iframe
+                    src="https://www.youtube.com/embed/wsAQQioPIJs"
+                    allowfullscreen
+                >
+
+                </iframe>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
