bootstrap 5 - modulo helpers - posicoes

--- a/hora-de-codar/11_helpers/index.html
+++ b/hora-de-codar/11_helpers/index.html
@@ -10,6 +10,9 @@
     <title>Helpers</title>
 </head>
 <body>
+
+    <!-- posicoe stick -->
+    <div class="sticky-top box-sticky"></div>
     
     <!-- com clear fix -->
     <div class="clearfix mt-4">
@@ -42,6 +45,9 @@
             </div>
         </div>
     </div>
+
+    <!-- posicoe stick -->
+    <div class="fixed-bottom box-fixed"></div>
 
 </body>
 </html>
