bootstrap 5 - modulo helpers - visually hidden

--- a/hora-de-codar/11_helpers/index.html
+++ b/hora-de-codar/11_helpers/index.html
@@ -49,5 +49,10 @@
     <!-- posicoe stick -->
     <div class="fixed-bottom box-fixed"></div>
 
+    <!-- visually hidden -->
+    <h2 class="visually-hidden">
+        quero descrever melhor esta imagem, pois ela é importante
+    </h2>
+
 </body>
 </html>
