bootstrap 5 - modulo helpers - link no elemento todo

--- a/hora-de-codar/11_helpers/index.html
+++ b/hora-de-codar/11_helpers/index.html
@@ -54,5 +54,17 @@
         quero descrever melhor esta imagem, pois ela é importante
     </h2>
 
+    <!-- link elemento -->
+    <div class="container m-4">
+        <div class="card" style="width: 18rem;">
+            <img src="https://via.placeholder.com/400" alt="imagem" > 
+            <div class="card-body">
+                <h5 class="card-title">produto legal</h5>
+                <p class="card-text">não perca o valor promocional</p>
+                <a href="https://google.com" class="btn btn-primary stretched-link">comprar</a>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
