bootstrap 5 - modulo helpers - text truncate

--- a/hora-de-codar/11_helpers/index.html
+++ b/hora-de-codar/11_helpers/index.html
@@ -66,5 +66,18 @@
         </div>
     </div>
 
+    <!-- text truncate -->
+    <div class="row">
+        <div class="col-2 text-truncate">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi cum nemo quisquam magnam vel et, sequi magni voluptate possimus odit quaerat, exercitationem, quae molestias ipsa quas esse sit nam consequuntur?
+        </div>
+        <div class="col-4 text-truncate">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi cum nemo quisquam magnam vel et, sequi magni voluptate possimus odit quaerat, exercitationem, quae molestias ipsa quas esse sit nam consequuntur?
+        </div>
+        <div class="col-6 text-truncate">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi cum nemo quisquam magnam vel et, sequi magni voluptate possimus odit quaerat, exercitationem, quae molestias ipsa quas esse sit nam consequuntur?
+        </div>
+    </div>
+
 </body>
 </html>
