bootstrap 5 - modulo utilities - brackgrounds

--- a/hora-de-codar/12_utilities/index.html
+++ b/hora-de-codar/12_utilities/index.html
@@ -10,6 +10,14 @@
     <title>Utilities</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="col-12 mb-3 bg-primary"></div>
+        <div class="col-12 mb-3 bg-danger">
+            <p>algum problema</p>
+        </div>
+        <div class="col-12 mb-3 bg-info"></div>
+        <div class="col-12 mb-3 bg-success"></div>
+        <div class="col-12 mb-3 bg-success bg-gradient"></div>
+    </div>
 </body>
 </html>
