--- a/hora-de-codar/12_utilities/index.html
+++ b/hora-de-codar/12_utilities/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <div class="container">
+
+        <!-- brackground -->
+
         <div class="col-12 mb-3 bg-primary"></div>
         <div class="col-12 mb-3 bg-danger">
             <p>algum problema</p>
