--- a/hora-de-codar/12_utilities/index.html
+++ b/hora-de-codar/12_utilities/index.html
@@ -27,6 +27,12 @@
         <div class="col-12 mb-3 border border-success border-3 border-top-0 bg-info"></div>
         <div class="col-12 mb-3 border border-info border-2 rounded-pill bg-warning"></div>
 
+        <!-- cores -->
+        <h1 class="text-primary">Testando</h1>
+        <h1 class="text-danger">Testando</h1>
+        <h1 class="text-primary bg-info">textando com bg</h1>
+        <h1 class="text-danger bg-dark border border-4 border-info">testando tudo junto</h1>
+
     </div>
 </body>
 </html>
