bootstrap 5 - modulo utilities - display

--- a/hora-de-codar/12_utilities/index.html
+++ b/hora-de-codar/12_utilities/index.html
@@ -33,6 +33,14 @@
         <h1 class="text-primary bg-info">textando com bg</h1>
         <h1 class="text-danger bg-dark border border-4 border-info">testando tudo junto</h1>
 
+        <!-- display -->
+        <div class="d-none">esta oculto</div>
+        <span class="d-block bg-primary">mudar para bloco</span>
+        <div class="d-inline bg-success">inline</div>
+        <div class="d-inline bg-success">inline</div>
+        <div class="d-inline bg-success">inline</div>
+        <div class="bg-success">inline</div>
+
     </div>
 </body>
 </html>
