bootstrap 5 - modulo utilities - flex

--- a/hora-de-codar/12_utilities/index.html
+++ b/hora-de-codar/12_utilities/index.html
@@ -41,6 +41,20 @@
         <div class="d-inline bg-success">inline</div>
         <div class="bg-success">inline</div>
 
+        <!-- flex -->
+        <div class="d-flex justify-content-between m-4">
+            <div class="bg-primary mb-2">1</div>
+            <div class="bg-primary mb-2">2</div>
+            <div class="bg-primary mb-2">3</div>
+        </div>
+
+        <div class="d-flex flex-column m-4">
+            <div class="bg-primary mb-2">1</div>
+            <div class="bg-primary mb-2">2</div>
+            <div class="bg-primary mb-2">3</div>
+        </div>
+        
+
     </div>
 </body>
 </html>
