bootstrap 5 - modulo utilities - interacoes

--- a/hora-de-codar/12_utilities/index.html
+++ b/hora-de-codar/12_utilities/index.html
@@ -54,6 +54,13 @@
             <div class="bg-primary mb-2">3</div>
         </div>
         
+        <!-- interacoes -->
+        <p class="user-select-all">pode selecionar tudo</p>
+        <p class="user-select-none">pode selecionar tudo</p>
+        <p>
+            voce não pode clicar
+            <a href="" class="pe-none">meu link</a>
+        </p>
 
     </div>
 </body>
