bootstrap 5 - modulo utilities - sombras

--- a/hora-de-codar/12_utilities/index.html
+++ b/hora-de-codar/12_utilities/index.html
@@ -62,6 +62,11 @@
             <a href="" class="pe-none">meu link</a>
         </p>
 
+        <!-- sombreamento -->
+        <div class="mb-4 shadow-sm">sombra pequena</div>
+        <div class="mb-4 shadow">sombra media</div>
+        <div class="mb-4 shadow-lg">sombra grande</div>
+
     </div>
 </body>
 </html>
