--- a/hora-de-codar/12_utilities/index.html
+++ b/hora-de-codar/12_utilities/index.html
@@ -67,6 +67,21 @@
         <div class="mb-4 shadow">sombra media</div>
         <div class="mb-4 shadow-lg">sombra grande</div>
 
+        <!-- altura e largura -->
+        <div class="w-25 bg-primary">a</div>
+        <div class="w-50 bg-info">a</div>
+        <div class="w-75 bg-success">a</div>
+        <div class="w-100 bg-info">a</div>
+
+        <div class="container altura m-4">
+            <div class="row h-100">
+                <div class="col-3 h-25 bg-primary">a</div>
+                <div class="col-3 h-50 bg-info">b</div>
+                <div class="col-3 h-75 bg-primary">c</div>
+                <div class="col-3 h-100 bg-info">d</div>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
