--- a/hora-de-codar/12_utilities/index.html
+++ b/hora-de-codar/12_utilities/index.html
@@ -82,6 +82,14 @@
             </div>
         </div>
 
+        <!-- wspacamento -->
+        <div class="p-0 m-0 box">0</div>
+        <div class="p-2 m-2 box">2</div>
+        <div class="p-4 m-4 box">4</div>
+
+        <div class="pt-5 mt-5 box">top 5</div>
+        <div class="ps-2 pb-4 ml-2 mb-4 box">lef 2 bottom 4</div>
+
     </div>
 </body>
 </html>
