--- a/hora-de-codar/12_utilities/index.html
+++ b/hora-de-codar/12_utilities/index.html
@@ -82,7 +82,7 @@
             </div>
         </div>
 
-        <!-- wspacamento -->
+        <!-- espacamento -->
         <div class="p-0 m-0 box">0</div>
         <div class="p-2 m-2 box">2</div>
         <div class="p-4 m-4 box">4</div>
