bootstrap 5 - modulo utilities - textos

--- a/hora-de-codar/12_utilities/index.html
+++ b/hora-de-codar/12_utilities/index.html
@@ -90,6 +90,17 @@
         <div class="pt-5 mt-5 box">top 5</div>
         <div class="ps-2 pb-4 ml-2 mb-4 box">lef 2 bottom 4</div>
 
+        <!-- textos -->
+        <p class="text-center">este texto esta no centro</p>
+        <div class="text-nowrap box-com-wrap">texto passando da caixa</div>
+        <p class="text-uppercase">este texto esta em caixa alta</p>
+        <p class="fs-1">aumentando a font-size</p>
+        <p class="fs-2">aumentando a font-size</p>
+        <p class="fw-bold">texto em negrito</p>
+        <div class="fst-italic">
+            em italico
+        </div>
+
     </div>
 </body>
 </html>
