--- a/hora-de-codar/13_fundamentoshtml/index.html
+++ b/hora-de-codar/13_fundamentoshtml/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>hello world</h1>
     <p>este é o meu primeiro paragrafo</p>
+    <h2>titulo 2</h2>
+    <h3>titulo 3</h3>
+    <h4>titulo 4</h4>
+    <h5>titulo 5</h5>
+    <h6>titulo 6</h6>
 </body>
 </html>
