bootstrap 5 - modulo fundamentos html - comentarios

--- a/hora-de-codar/13_fundamentoshtml/index.html
+++ b/hora-de-codar/13_fundamentoshtml/index.html
@@ -6,6 +6,7 @@
     <title>Fundamentos html</title>
 </head>
 <body>
+    <!-- aqui é um comentario -->
     <h1>hello world</h1>
     <p>este é o meu primeiro paragrafo</p>
     <h2>titulo 2</h2>
