bootstrap 5 - modulo fundamentos html - tag para imagens

--- a/hora-de-codar/13_fundamentoshtml/index.html
+++ b/hora-de-codar/13_fundamentoshtml/index.html
@@ -12,5 +12,6 @@
     <h2>titulo 2</h2>
     <h3>titulo 3</h3>
     <p>este <a href="https://www.google.com">link</a> vai para o google</p>
+    <img src="https://via.placeholder.com/500" alt="logo" />
 </body>
 </html>
