--- a/hora-de-codar/13_fundamentoshtml/formularios.html
+++ b/hora-de-codar/13_fundamentoshtml/formularios.html
@@ -9,6 +9,17 @@
     <form action="envio.php" method="post">
         <input type="text" name="nome" >
         <br>
+        <input type="checkbox" name="temcarro" >eu tenho um carro
+        <br >
+        data de nascimento <input type="date" name="aniversario" >
+        <br>
+        <input type="radio" name="sexo" value="masculino" >masculino
+        <input type="radio" name="sexo" value="feminino" >feminino
+        <br>
+        <textarea rows="4" cols="20"></textarea>
+        <br>
+        <input type="password" name="senha" >
+        <br>
         <input type="submit" value="enviar" >
     </form>
 </body>
